<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Systemtransparenz</groupId>
  <artifactId>Systemtransparenz</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <organization>
  <name>Prokopowicz</name>
  </organization>
  <dependencies>
  	<dependency>
	    <groupId>org.postgresql</groupId>
	    <artifactId>postgresql</artifactId>
	    <version>42.5.1</version>
	</dependency>
	</dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
      </plugin>
      <plugin>
    	<groupId>com.zenjava</groupId>
    		<artifactId>javafx-maven-plugin</artifactId>
    		<version>8.1.2</version>
    		<configuration>
        		<mainClass>application.Main</mainClass>
        		<nativeInstallers />
    		</configuration>
		</plugin>
    </plugins>
  </build>
</project>